<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/grid_1"
    android:transitionGroup="true"
    android:transitionName="fab_add_task"
    tools:context="com.atech.tasktracker.ui.fragments.add.AddTaskFragment">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlined_text_field_task_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/task_name"
        app:boxStrokeColor="@color/mtrl_outlined_stroke_color"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_task_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlined_text_initial_progress"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/initial_progress"
        app:boxStrokeColor="@color/mtrl_outlined_stroke_color"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_initial_task"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/MainColor"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="3" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlined_text_field_final_progress"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/final_task"
        app:boxStrokeColor="@color/mtrl_outlined_stroke_color"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_final_task"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="3" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_add"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="match_parent"
        android:padding="@dimen/grid_1"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/grid_2"
        android:gravity="center"
        android:text="@string/add" />

</LinearLayout>