<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/grid_1"
    android:layout_marginVertical="@dimen/grid_0_25"
    app:cardBackgroundColor="?attr/colorSurface"
    app:strokeColor="@color/divider_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/grid_1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:animateLayoutChanges="true">

            <TextView
                android:id="@+id/text_view_task_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/grid_1"
                android:ellipsize="end"
                android:maxLines="2"
                android:textAppearance="?attr/textAppearanceHeadlineSmall"
                app:layout_constraintEnd_toStartOf="@+id/text_view_task_progress"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Learn Python" />

            <TextView
                android:id="@+id/text_view_task_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/grid_1"
                android:textAppearance="?attr/textAppearanceHeadlineSmall"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="4/5" />

            <com.google.android.material.progressindicator.LinearProgressIndicator
                android:id="@+id/progress_indicator_task"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/grid_1"
                android:padding="@dimen/grid_1"
                android:progress="50"
                app:layout_constraintTop_toBottomOf="@+id/text_view_task_name"
                app:trackColor="?attr/colorSurface"
                app:trackCornerRadius="@dimen/grid_1"
                app:trackThickness="@dimen/grid_1"
                tools:layout_editor_absoluteX="-37dp" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider_task"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/grid_1"
                android:visibility="gone"
                app:dividerColor="@color/divider_color"
                app:layout_constraintTop_toBottomOf="@+id/progress_indicator_task"
                tools:layout_editor_absoluteX="16dp"
                tools:visibility="visible" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/grid_1"
            android:orientation="horizontal"
            android:padding="@dimen/grid_1"
            android:visibility="gone"
            android:weightSum="3"
            tools:layout_editor_absoluteX="16dp"
            tools:visibility="visible">

            <ImageButton
                android:id="@+id/button_decrease"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?attr/actionBarItemBackground"
                android:contentDescription="@string/remove"
                android:padding="@dimen/grid_1"
                android:src="@drawable/ic_baseline_remove_24"
                app:tint="?attr/colorPrimary" />

            <ImageButton
                android:id="@+id/button_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?attr/actionBarItemBackground"
                android:contentDescription="@string/delete"
                android:padding="@dimen/grid_1"
                android:src="@drawable/ic_baseline_delete_24"
                app:tint="?attr/colorPrimary" />

            <ImageButton
                android:id="@+id/button_increase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?attr/actionBarItemBackground"
                android:contentDescription="@string/add"
                android:padding="@dimen/grid_1"
                android:src="@drawable/ic_baseline_add_24"
                app:tint="?attr/colorPrimary" />
        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>